--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -382,7 +382,7 @@
         .list {
             margin-left: 50px;
             margin-right: 50px;
-            padding: 30px;
+            padding: 30px 0px;
             background-color: var(--Noblanco-color);
             margin-bottom: 100px;
             border: 7px solid var(--letsblue-color);
@@ -391,15 +391,21 @@
         }
         
         .list__title {
-            margin-bottom: 20px;
+            margin: 0px auto 10px auto;
+            font-family: var(--font-secondary);
+            text-align: center;
+        }
+        
+        div.list__title h3 {
+            font-size: 30px;
         }
         
         .list__subtitle {
-            margin-top: 20px;
+            margin-top: 30px;
         }
         
         .sublist {
-            margin: 5px 5px 5px 20px;
+            margin: 0px 0px 0px 30px;
         }
         
         .daily {
