errores corregidos-readme acabado

--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -10,16 +10,16 @@
             --Noblanco-color: rgb(255, 250, 250);
             --letsblue-color: rgb(1, 13, 208);
             --font-main: Verdana, Geneva, Tahoma, sans-serif;
-            --font-secondary: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+            --font-secondary: Arial Narrow Bold, sans-serif;
         }
-        /* GENERAL--------------------------------------------------------------------------- */
+        /*GENERAL ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════ */
         
         body {
             background-color: rgb(187, 208, 255);
         }
         
         .width_main {
-            width: 95%;
+            width: 80%;
             margin: auto;
         }
         
@@ -34,7 +34,7 @@
         .font-30 {
             font-size: 30px;
         }
-        /* EFECTOS-------------------------------------------------------------------------------- */
+        /*EFECTOS ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════ */
         
         .zoom {
             transition: all 0.5s;
@@ -47,7 +47,7 @@
         .shadow {
             box-shadow: 5px 5px 5px;
         }
-        /* LOGO---------------------------------------------------------------------------------------- */
+        /*LOGO ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════ */
         
         .logo {
             display: flex;
@@ -61,7 +61,7 @@
             border: 7px solid var(--letsblue-color);
             border-radius: 15px;
         }
-        /* NAVEGACIÓN------------------------------------------------------------------------------ */
+        /* NAVEGACIÓN ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════*/
         
         .navegacion {
             display: flex;
@@ -93,7 +93,7 @@
             transition: all 0.5s;
             background-color: var(--Noblanco-color);
         }
-        /* HOME-------------------------------------------------------------------------------------------------- */
+        /* HOME ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════ */
         
         .home__encabezado {
             text-align: center;
@@ -167,7 +167,7 @@
             transition: all 0.5s;
             background-color: var(--Noblanco-color);
         }
-        /* CONOCENOS-------------------------------------------------------------------------------------- */
+        /* CONOCENOS ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════ */
         
         .conocenos {
             text-align: center;
@@ -206,7 +206,7 @@
         .mentor__texto--descripcion {
             margin-top: 40px;
         }
-        /* INFORMACIÓN-------------------------------------------------------------------------- */
+        /* INFORMACIÓN ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════ */
         
         .info {
             text-align: center;
@@ -310,17 +310,16 @@
         
         .list__subtitle {
             margin-top: 30px;
+            padding: 20px;
+        }
+        
+        li h4 {
+            margin-bottom: 20px;
         }
         
         .sublist {
             padding-right: 10px;
             margin: 0px 0px 0px 30px;
-        }
-        
-        .list_style {
-            list-style-type: none;
-            padding: 0px;
-            /*<<<NO TOCAR padding 0px*/
         }
         
         ul li {
@@ -335,7 +334,7 @@
             border: 7px solid var(--letsblue-color);
             border-radius: 15px;
         }
-        /* CONTACTO-------------------------------------------------------------------------------------- */
+        /* CONTACTO ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════ */
         
         .contacto {
             width: 70%;
@@ -378,7 +377,7 @@
             color: var(--letsblue-color);
             font-size: 35px;
         }
-        /* FORMULARIO----------------------------------------------------------------------------- */
+        /* FORMULARIO ════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════ */
         
         .form__flex {
             display: flex;
